# otter

./: CMakeLists.txt
cmake/compiler/clang/: settings.cmake
cmake/compiler/gcc/: settings.cmake
cmake/compiler/icc/: settings.cmake
cmake/compiler/mingw/: settings.cmake
cmake/compiler/msvc/: settings.cmake
cmake/macros/: CheckPlatform.cmake  ConfigureBaseTargets.cmake  GroupSources.cmake
cmake/platform/unix/: settings.cmake
common/: CMakeLists.txt  define.h  log.cpp  log.h
common/debug/: WheatyExceptionReport.cpp  WheatyExceptionReport.h
common/network/: asio_hacks_fwd.h  async_acceptor.h  deadline_timer.h  io_context.h  ionetwork_thread.h  ip_adddress.h  ip_network.h  resolver.h  socket.h  socket_mgr.h  strand.h
common/sol/: forward.hpp  sol.hpp
common/spdlog/fmt/bundled/: format.h  ostream.h  printf.h
common/utilities/: byte_buffer.cpp  byte_buffer.h  byte_converter.h  common_util.cpp  common_util.h  errors.cpp  errors.h  message_buffer.h
linux_build/: CMakeCache.txt  cmake_uninstall.cmake
opt/: CMakeLists.txt  luajit.cmake  protobuf.cmake  yaml-cpp.cmake
opt/boost/: CMakeLists.txt
opt/luajit/lib/: lua51.lib
opt/protobuf/java/: pom.xml
opt/protobuf/java/util/: pom.xml
otter/: CMakeLists.txt  main.cpp
otter/app/: app.cpp  app.h
otter/server/: otter_socket.cpp  otter_socket.h  otter_socketmgr.cpp  otter_socketmgr.h
